# Ragforself

./: .env  ARCHITECTURE.md  README.md  deploy.py  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  start.sh
api/: main.py
api/routes/: auth.py  chat.py  documents.py
config/: settings.py
core/: document_processor.py  embedding_engine.py  generation_engine.py  qwen_llm.py  retrieval_engine.py  services.py
tests/: test_core.py
ui/: index.html
uploads/: 1f50ff1a-c23f-48b6-887f-326b9e1293ad_委内瑞拉总统被生擒，对世界有何影响？.txt  cee17e48-cb6b-449d-9ef8-0227bdf18a66_HiDream-I1-HTTP说明文档-王梦迪.docx
utils/: logger.py  security.py
vector_store/: chroma.sqlite3  processed_files.json
